[package]
name = "tree-sitter-sas"
description = "SAS grammar for tree-sitter"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sas"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/example/tree-sitter-sas"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0.97"
tree-sitter-cli = "0.26"

[dev-dependencies]
tree-sitter = "0.26"
